Add APPLICATION_ID to env (2)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APPLICATION_ID=app.covidshield
+APP_ID=app.covidshield
 TEST_MODE=true
 SUBMIT_URL=https://submit.covidshield.app
 RETRIEVE_URL=https://retrieve.covidshield.app
