--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ID=app.covidshield
 APP_VERSION_CODE=1
-APP_VERSION_NAME="1.0"
+APP_VERSION_NAME=1.0
 TEST_MODE=true
 SUBMIT_URL=https://submit.covidshield.app
 RETRIEVE_URL=https://retrieve.covidshield.app
