--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test": "jest",
     "tsc": "tsc"
   },
+  "jest": {
+    "preset": "ts-jest"
+  },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.10",
@@ -58,7 +61,7 @@
     "@react-native-community/eslint-config": "^1.0.0",
     "@shopify/eslint-plugin": "^36.0.2",
     "@types/crypto-js": "^3.1.45",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^26.0.0",
     "@types/jest-when": "^2.7.1",
     "@types/react-native": "^0.62.0",
     "@types/react-native-share": "^3.1.0",
@@ -66,13 +69,14 @@
     "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "babel-jest": "25.1.0",
+    "babel-jest": "26.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.5.1",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "jest": "25.1.0",
-    "jest-when": "^2.7.1",
+    "jest": "26.0.1",
+    "jest-mock-extended": "^1.0.9",
+    "jest-when": "^2.7.2",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "1.19.1",
     "prettier-eslint": "^9.0.0",
@@ -80,7 +84,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.11.0",
     "reactotron-react-native": "^3.2.1",
-    "ts-jest": "25.2.1",
+    "ts-jest": "26.1.1",
     "typescript": "^3.8.3"
   }
 }
